2022-02-01  Pablo Saavedra  <psaavedra@igalia.com>

        [GTK][WPE] Fixes for non-unified builds after r288807 and r288820
        https://bugs.webkit.org/show_bug.cgi?id=235956

        Reviewed by Mark Lam.

        * wtf/GenericHashKey.h:

2022-02-01  Ben Nham  <nham@apple.com>

        Import APSConnection-related SPI
        https://bugs.webkit.org/show_bug.cgi?id=235856

        Reviewed Youenn Fablet.

        Add a HAVE macro to guard some of the newer SPI in APSConnection.

        * wtf/PlatformHave.h:

2022-02-01  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r288746.
        https://bugs.webkit.org/show_bug.cgi?id=235967

        Caused a 5% Speedometer-2 - jQuery-TodoMVC regression.

        Reverted changeset:

        "Enable inert attribute feature flag"
        https://bugs.webkit.org/show_bug.cgi?id=235668
        https://commits.webkit.org/r288746

2022-02-01  Mark Lam  <mark.lam@apple.com>

        Enhance sanitizeStackForVM() to assist with crash analysis.
        https://bugs.webkit.org/show_bug.cgi?id=235752
        rdar://81014601

        Reviewed by Michael Saboff.

        * wtf/Threading.h:
        (WTF::Thread::savedStackPointerAtVMEntry const):
        (WTF::Thread::savedLastStackTop const):
        (WTF::Thread::savedStackPointerAtVMEntry): Deleted.
        (WTF::Thread::savedLastStackTop): Deleted.

2022-01-31  Yusuke Suzuki  <ysuzuki@apple.com>

        Revert OSAllocator behavior to pre-Structure-Allocator change one
        https://bugs.webkit.org/show_bug.cgi?id=235940

        Reviewed by Mark Lam.

        Before r288815, OSAllocator::reserveAndCommit can fail only for executable memory.

            if (result == MAP_FAILED) {
                if (executable)
                    result = 0;
                else
                    CRASH();
            }

        However, after r288815, this behavior was changed.

        Before r288815,
